hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_top_pass_float.php
<?php

$list = new SplDoublyLinkedList();
$list->push("top");
$list->top(3.14159);

?>